@@ -347,6 +347,15 @@ int libcthreads_queue_empty(
      libcthreads_queue_t *queue,
      libcthreads_error_t **error );
 
+/* Tries to pop a value off the queue
+ * Returns 1 if successful, 0 if not or -1 on error
+ */
+LIBCTHREADS_EXTERN \
+int libcthreads_queue_try_pop(
+     libcthreads_queue_t *queue,
+     intptr_t **value,
+     libcthreads_error_t **error );
+
 /* Pops a value off the queue
  * Returns 1 if successful or -1 on error
  */
@@ -356,6 +365,15 @@ int libcthreads_queue_pop(
      intptr_t **value,
      libcthreads_error_t **error );
 
+/* Tries to push a value onto the queue
+ * Returns 1 if successful, 0 if not or -1 on error
+ */
+LIBCTHREADS_EXTERN \
+int libcthreads_queue_try_push(
+     libcthreads_queue_t *queue,
+     intptr_t *value,
+     libcthreads_error_t **error );
+
 /* Pushes a value onto the queue
  * Returns 1 if successful or -1 on error
  */
@@ -363,6 +381,24 @@ LIBCTHREADS_EXTERN \
 int libcthreads_queue_push(
      libcthreads_queue_t *queue,
      intptr_t *value,
+     libcthreads_error_t **error );
+
+/* Pushes a value onto the queue in sorted order
+ *
+ * Uses the value_compare_function to determine the similarity of the values
+ * The value_compare_function should return LIBCTHREADS_COMPARE_LESS,
+ * LIBCTHREADS_COMPARE_EQUAL, LIBCTHREADS_COMPARE_GREATER if successful or -1 on error
+ *
+ * Returns 1 if successful, 0 if the value already exists or -1 on error
+ */
+int libcthreads_queue_push_sorted(
+     libcthreads_queue_t *queue,
+     intptr_t *value,
+     int (*value_compare_function)(
+            intptr_t *first_value,
+            intptr_t *second_value,
+            libcthreads_error_t **error ),
+     uint8_t sort_flags,
      libcthreads_error_t **error );
 
 /* -------------------------------------------------------------------------
